.current class for active step

--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
   <meta name=viewport content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
   <nav>
-    <a href="">
+    <a href="" >
       <span title="Step 1">Step content</span>
     </a>
     <a href="">
       <span title="Step 2">Step content</span>
     </a>
-    <a href="">
+    <a href="" >
       <span title="Step 3">Step content</span>
     </a>
-    <a href="">
+    <a href="" class="current">
       <span title="Step 4">Step content</span>
     </a>
   </nav>
