--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
   <meta charset=utf-8>
   <link rel=stylesheet href=style.css>
   <title>Wizard, HTML and CSS only</title>
-  <meta name=description content="A simple Wizard made with HTML and CSS only">
+  <meta name=description content="A simple Wizard made with terse HTML and CSS only">
   <meta name=viewport content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
   <nav>
-    <a href="" >
+    <a href="">
       <span title="Step 1">Step content</span>
     </a>
-    <a href="">
+    <a href="" class="current">
       <span title="Step 2">Step content</span>
     </a>
     <a href="" >
       <span title="Step 3">Step content</span>
     </a>
-    <a href="" class="current">
+    <a href="">
       <span title="Step 4">Step content</span>
     </a>
   </nav>
