--- a/index.html
+++ b/index.html
@@ -8,15 +8,27 @@
 
   <nav>
     <a href="">
-      <span title="Step 1">Step content</span>
+      <span>
+        Step 1<br>
+        Step content
+      </span>
     </a>
-    <a href="" class="current">
-      <span title="Step 2">Step content</span>
+    <a href="" class="">
+      <span>
+        Step 2<br>
+        Step content
+      </span>
     </a>
     <a href="" >
-      <span title="Step 3">Step content</span>
+      <span>
+        Step 3<br>
+        Step content
+      </span>
     </a>
     <a href="">
-      <span title="Step 4">Step content</span>
+      <span>
+        Step 4<br>
+        Step content
+      </span>
     </a>
   </nav>
