--- a/index.html
+++ b/index.html
@@ -7,25 +7,25 @@
   <meta name=viewport content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
   <nav>
-    <a href="">
+    <a href=''>
       <span>
         Step 1<br>
         Step content
       </span>
     </a>
-    <a href="" class="">
+    <a href=''>
       <span>
         Step 2<br>
         Step content
       </span>
     </a>
-    <a href="" >
+    <a href=''>
       <span>
         Step 3<br>
         Step content
       </span>
     </a>
-    <a href="">
+    <a href=''>
       <span>
         Step 4<br>
         Step content
