.done, .current states

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <meta name=viewport content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
   <nav>
-    <a href=''>
+    <a href='' class=done>
       <span>
         Step 1<br>
         Step content
       </span>
     </a>
-    <a href=''>
+    <a href='' class=current>
       <span>
         Step 2<br>
         Step content
