--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
   <html lang=en>
   <meta charset=utf-8>
   <link rel=stylesheet href=style.css>
-  <title>Wizard, HTML and CSS only</title>
-  <meta name=description content="A simple Wizard made with terse HTML and CSS only">
+  <title>Step Wizard, HTML and CSS only</title>
+  <meta name=description content="A simple Step Wizard, with arrows, made with terse HTML and CSS only">
   <meta name=viewport content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
   <nav>
